# disasm86

./: README.md
disasm86/: CMakeLists.txt  main.c
disasm86/disasm_x86/: disasm_x86.c  disasm_x86.h
disasm86/disasm_x86/Commands/: Commands.c  Commands.h
disasm86/disasm_x86/Commands/Operand/: Operand.c  Operand.h
disasm86/disasm_x86/Commands/Operand/FarPtr/: FarPtr.c  FarPtr.h
disasm86/disasm_x86/Commands/Operand/Imm/: Imm.c  Imm.h
disasm86/disasm_x86/Commands/Operand/MemOff/: MemOff.c  MemOff.h
disasm86/disasm_x86/Commands/Operand/Offset/: Offset.c  Offset.h
disasm86/disasm_x86/Commands/Operand/RM/: RM.c  RM.h
disasm86/disasm_x86/Commands/Operand/RM/Mem/: Mem.c  Mem.h
disasm86/disasm_x86/Commands/Operand/RM/ModRM/: Mod.h  ModRM.h  OpcodeExt.h
disasm86/disasm_x86/Commands/Operand/RM/RM16/: RM16.c  RM16.h
disasm86/disasm_x86/Commands/Operand/RM/RM32/: RM32.c  RM32.h
disasm86/disasm_x86/Commands/Operand/RM/RM32/SIB/: SIB.c  SIB.h  Scale.h
disasm86/disasm_x86/Commands/Operand/RM/RM32/SIB/Base/: Base.c  Base.h
disasm86/disasm_x86/Commands/Operand/RM/RM32/SIB/Index/: Index.c  Index.h
disasm86/disasm_x86/Commands/Operand/Reg/: Reg.c  Reg.h
disasm86/disasm_x86/Commands/Prefix/: Prefix.c  Prefix.h
disasm86/disasm_x86/Procs/: Procs.c  Procs.h
