cmake_minimum_required(VERSION 3.13)

project(disasm_x86 LANGUAGES C)

set(CMAKE_C_FLAGS "${CMAKE_C_FLGAS} -std=c11 -O3 -Wfatal-errors")
set(TARGET disasm86)

add_executable(${TARGET} main.c)

add_library(disasm_x86 OBJECT disasm_x86/disasm_x86.c)
add_library(Procs      OBJECT disasm_x86/Procs/Procs.c)
add_library(Commands   OBJECT disasm_x86/Commands/Commands.c)
add_library(Prefix     OBJECT disasm_x86/Commands/Prefix/Prefix.c)
add_library(Operand    OBJECT disasm_x86/Commands/Operand/Operand.c)
add_library(FarPtr     OBJECT disasm_x86/Commands/Operand/FarPtr/FarPtr.c)
add_library(Imm        OBJECT disasm_x86/Commands/Operand/Imm/Imm.c)
add_library(MemOff     OBJECT disasm_x86/Commands/Operand/MemOff/MemOff.c)
add_library(Offset     OBJECT disasm_x86/Commands/Operand/Offset/Offset.c)
add_library(Reg        OBJECT disasm_x86/Commands/Operand/Reg/Reg.c)
add_library(RM         OBJECT disasm_x86/Commands/Operand/RM/RM.c)
add_library(Mem        OBJECT disasm_x86/Commands/Operand/RM/Mem/Mem.c)
add_library(RM16       OBJECT disasm_x86/Commands/Operand/RM/RM16/RM16.c)
add_library(RM32       OBJECT disasm_x86/Commands/Operand/RM/RM32/RM32.c)
add_library(SIB        OBJECT disasm_x86/Commands/Operand/RM/RM32/SIB/SIB.c)
add_library(Index      OBJECT disasm_x86/Commands/Operand/RM/RM32/SIB/Index/Index.c)
add_library(Base       OBJECT disasm_x86/Commands/Operand/RM/RM32/SIB/Base/Base.c)

target_link_libraries(${TARGET} disasm_x86)
target_link_libraries(${TARGET} Procs)
target_link_libraries(${TARGET} Commands)
target_link_libraries(${TARGET} Prefix)
target_link_libraries(${TARGET} Operand)
target_link_libraries(${TARGET} FarPtr)
target_link_libraries(${TARGET} Imm)
target_link_libraries(${TARGET} MemOff)
target_link_libraries(${TARGET} Offset)
target_link_libraries(${TARGET} Reg)
target_link_libraries(${TARGET} RM)
target_link_libraries(${TARGET} Mem)
target_link_libraries(${TARGET} RM16)
target_link_libraries(${TARGET} RM32)
target_link_libraries(${TARGET} SIB)
target_link_libraries(${TARGET} Index)
target_link_libraries(${TARGET} Base)